workOnRobot: BIOS on start
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,4 +1,5 @@
 \newacronym{API}{API}{Application Programming Interface}
+\newacronym{BIOS}{BIOS}{Basic Input Output System}
 \newacronym{DDS}{DDS}{Data Distribution Service}
 \newacronym{GCC}{GCC}{GNU Compiler Collection}
 \newacronym{GNU}{GNU}{GNU is not Unix}
