--- a/includes/controller.tex
+++ b/includes/controller.tex
@@ -160,7 +160,7 @@ Následne sme dopočítali polohu robota v~Karteziánskej súradnicovej sústave
 
 Ďalšiu vec, ktorú je treba vysvetliť ku~grafu Obr.~\ref{fig:flowchart} je zdieľanie polohy. Odometria
 po~každom prepočítaní polohy robota publikuje túto informáciu na~tému \textit{/odom} táto správa je typu
-\textit{geometry\_msgs/msg/Odometry}. Tento typ správy obsahuje štyri hlavné časti:
+\textit{geometry\_msgs/msg/Odometry}. Správa obsahuje štyri hlavné časti:
 \begin{itemize}
 	\item \textbf{hlavička} Hlavička obsahuje čas a~identifikačný reťazec odosielajúceho rámca
 	\item \textbf{ID dcérskeho rámca} Identifikačný reťazec prímajúceho rámca
