--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 
 % Fill in your name, thesis title and details
 \FEIauthor{Filip Lobpreis}
-\FEItitle{Vytvorenie Ovládača v prostredí ROS pre mobilného robota}
+\FEItitle{Vytvorenie Ovládača v prostredí ROS pre~mobilného robota}
 \FEItitleEn{Implementation of ROS Driver for Mobile Robot}
 \FEIkeywords{ROS, BlackMetal, uzly, témy, služby, akcie}
 \FEIkeywordsEn{ROS, BlackMetal, nodes, topics, services, actions}
