cp: support for multifile in lsp
Signed-off-by: Filip Lobpreis <f.lobpreis@gmail.com>

--- a/includes/abstractEN.tex
+++ b/includes/abstractEN.tex
@@ -1,3 +1,4 @@
+% !TEX root = ../main.tex
 The mobile robot performs such movements as we give it. Therefore, for this method to be as effective as possible, it must be readable both
 for the robot and for the user. The major task is to create such an environment for controlling the robot, so that the code is efficient and simple.
 Thus, it will be readable by both humans and robots. We decided for ROS2. You can read more about why and how we made the individual parts in the next sections.
