--- a/includes/glossary.tex
+++ b/includes/glossary.tex
@@ -1,3 +1,4 @@
+% !TEX root = ../main.tex
 \newacronym{API}{API}{Application Programming Interface}
 \newacronym{BIOS}{BIOS}{Basic Input Output System}
 \newacronym{DDS}{DDS}{Data Distribution Service}
