--- a/includes/introduction.tex
+++ b/includes/introduction.tex
@@ -1,4 +1,5 @@
-Táto bakalárska práca popisuje ako naprogramovať ovládač pre~mobilného robota pomocou druhej verzie Robotického Operačného Systému (ROS2).
-Ovládač obsahuje funkcie ROS2 napr. uzly, parametre, služby a~témy. Hlavným cieľom tohto projektu je vytvoriť rozhranie tak, aby
-bolo možné ovládať robota pomocou jednoduchých príkazov cez~ROS.
+% !TEX root = ../main.tex
+Táto bakalárska práca popisuje ako naprogramovať ovládač pre mobilného robota pomocou druhej verzie Robotického Operačného Systému (ROS2).
+Ovládač obsahuje funkcie ROS2 napr. uzly, parametre, služby a témy. Hlavným cieľom tohto projektu je vytvoriť rozhranie tak, aby
+bolo možné ovládať robota pomocou jednoduchých príkazov cez ROS.
 
